force-app/main/default/objects/Confiscation_Bag__c/Confiscation_Bag__c.object-meta.xml
<CustomObject>
    <label>Confiscation Bag</label>
    <nameField>
        <label>Bag Tag</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Confiscation Bags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>