force-app/main/default/objects/Confiscation_Bag__c/fields/Confiscation_Date__c.field-meta.xml
<CustomField>
    <fullName>Confiscation_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <inlineHelpText>Enter the date of the confiscation</inlineHelpText>
    <label>Confiscation Date</label>
    <type>Date</type>
</CustomField>