force-app/main/default/objects/Confiscation_Bag__c/fields/Liability__c.field-meta.xml
<CustomField>
    <fullName>Liability__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent liability to the confiscation</description>
    <label>Liability</label>
    <referenceTo>Liability__c</referenceTo>
    <relationshipLabel>Confiscation Bags</relationshipLabel>
    <relationshipName>Confiscation_Bags</relationshipName>
    <type>Lookup</type>
</CustomField>