force-app/main/default/objects/Confiscation_Bag__c/recordTypes/Equipment.recordType-meta.xml
<RecordType>
    <fullName>Equipment</fullName>
    <active>true</active>
    <description>This bag contains only &#39;Equipment&#39; type item</description>
    <label>Equipment</label>
</RecordType>