force-app/main/default/objects/Confiscation_Bag__c/recordTypes/Garment.recordType-meta.xml
<RecordType>
    <fullName>Garment</fullName>
    <active>true</active>
    <description>This bag contains only &#39;Garment&#39; type item</description>
    <label>Garment</label>
</RecordType>